# mux

./: .clang-format  .gitignore  Makefile  README.md  flake.nix  install.sh  meson.build
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  benchmark_mux.c
demo/: demo-script.sh  demo.cast  demo.yml  record-demo.sh
docs/: tmuxinator-compatibility.md
src/: arena.c  arena.h  cli.c  cli.h  completion.c  completion.h  config.c  config.h  doctor.c  doctor.h  main.c  path.c  path.h  project.c  project.h  script.c  script.h  shell.c  shell.h  str.c  str.h  template.c  template.h  tmux.c  tmux.h
tests/: test_arena.c  test_cli.c  test_config.c  test_path.c  test_script.c  test_script_regressions.c  test_shell.c  test_str.c  test_template.c  test_tmux.c
tests/fixtures/: README.md  detach.yml  focused_pane.commands  focused_pane.yml  hooks.commands  hooks.yml  nameless_window.yml  noroot.yml  nowindows.yml  pane_titles.commands  pane_titles.yml  sample.commands  sample.yml  sample_deprecations.commands  sample_deprecations.yml  sample_emoji_as_name.yml  sample_literals_as_window_name.yml  sample_number_as_name.yml  sample_wemux.yml  socket.yml  startup.yml  synchronize.yml  template.yml  window_root.commands  window_root.yml
tests/integration/: test_basic.sh
